Meta tag for SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Whiteboardr</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
+	<meta name="description" content="Whiteboardr is an interactive, collaborative HTML5 application aimed at educational markets. Whiteboardr can be used in-class with a classroom management system or used to augment online courses.">
 	<meta name="author" content="">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
