no h-scroll for question textarea

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 	</div>
 
 	<div class="form-horizontal">
-		<div class="modal-body">
+		<div class="modal-body question-body">
 			<textarea type="text" id="input-question" onkeypress="WBR.enterQuestion()" placeholder="type your question here..." class=" input input-large" autofocus></textarea>
 		</div>
 
