fixed mobile buttons

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
 					<li>
 						<div class="btn-group" data-toggle="buttons-radio">
-							<button class="btn active" onClick="WBR.setDraw()" ontouchend="WBR.setDraw()" ><i class="icon-pencil"></i> <span class="buttontext">Draw</span></button>
-							<button class="btn" onClick="WBR.setErase()" ontouchend="WBR.setErase()"><i class="icon-remove-sign"></i> <span class="buttontext">Erase</span></button>
+							<button id="setDraw" class="btn active" onClick="WBR.setDraw(false)" ontouchend="WBR.setDraw(true)" ><i class="icon-pencil"></i> <span class="buttontext">Draw</span></button>
+							<button id="setErase" class="btn" onClick="WBR.setErase(false)" ontouchend="WBR.setErase(true)"><i class="icon-remove-sign"></i> <span class="buttontext">Erase</span></button>
 						</div>
 					</li>
 
